# C9MagangBanyubramanta_M-Naufal-Syahputra

./: .gitignore  README.md
calculator/src/: client.cpp
controller/: CMakeLists.txt
controller/src/: controller_node.cpp
fibonacci/: CMakeLists.txt  package.xml
fibonacci/src/: server.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: Controller.msg
log/: latest_list
opencv_trackbar/: mask_trackbar.cpp  track
pubsub/: package.xml
pubsub/src/: pub.cpp
ros2ws/install/: local_setup.sh  setup.sh
ros2ws/install/calculator/lib/calculator/: client  server
ros2ws/install/calculator/share/calculator/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros2ws/install/controller/lib/controller/: controller_node
ros2ws/install/controller/share/controller/: local_setup.sh  package.sh  package.xml
ros2ws/install/fibonacci/lib/fibonacci/: client  server
ros2ws/install/fibonacci/share/fibonacci/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2ws/install/interfaces/share/interfaces/: local_setup.sh  package.sh
ros2ws/install/pubsub/lib/pubsub/: pub  sub
src/controller/src/: controller_node.cpp
src/interfaces/: CMakeLists.txt
src/opencv_img/: CMakeLists.txt  package.xml
src/opencv_img/src/: opencv_pub.cpp
src/opencv_openvino/: CMakeLists.txt  package.xml
src/opencv_openvino/model/: waras.xml
src/opencv_openvino/src/: obj_detect.cpp  yolov5.cpp
src/serial _com_stm32/: CMakeLists.txt  package.xml
src/serial _com_stm32/src/: send_msg.cpp
src/sim_gazebo/: CMakeLists.txt  package.xml
src/sim_gazebo/description/: camera.xacro  intertial.xacro  robot.xacro
src/sim_gazebo/include/: pid.hpp  rov_controller.hpp
src/sim_gazebo/launch/: sim.launch.py
src/sim_gazebo/src/: pid.cpp  rov_controller.cpp
src/sim_gazebo/worlds/: my.sdf
(+56 files in other folders)
